# souffle

./: .clang-format  .gitignore  .souffle-sh  .travis.yml  CMakeLists.txt  MANIFEST.in  Makefile.am  README.md  bootstrap  choco-packages.config  configure.ac  describe.sh  flake.nix  ir.md  master.diff  noxfile.py  pyproject.toml  setup.py  vcpkg.json
include/: Makefile.am
include/souffle/: BinaryConstraintOps.h  CompiledSouffle.h  ReadStream.h  ReadStreamJSON.h  WriteStreamJSON.h
include/souffle/io/: ReadStream.h  ReadStreamCSV.h  ReadStreamJSON.h  WriteStream.h  WriteStreamCSV.h  WriteStreamJSON.h
include/souffle/swig/: SwigInterface.i
include/souffle/utility/: EvaluatorUtil.h  MiscUtil.h
prof/: Makefile.am  build.gradle  settings.gradle  souffle-profile
prof/gradle/wrapper/: gradle-wrapper.properties
prof/html/: SouffleProfGui.html
prof/html/js/: db.js
prof/html/json/: overview.json  properties.json  rel.json  rul.json
prof/html/views/: RelView.html  TopView.html
src/: AggregateOp.h  AstArgument.h  AstComponent.h  AstGroundAnalysis.cpp  AstPragma.h  AstProgram.h  AstRelation.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstSrcLocation.cpp  AstToRamTranslator.cpp  AstToRamTranslator.h  AstTransforms.cpp  AstTransforms.h  AstTranslator.cpp  AstTranslator.h  AstType.h  AstTypeAnalysis.cpp  AstTypeEnvironmentAnalysis.cpp  AstUtils.cpp  AstUtils.h  AstVisitor.h  BTree.h  BinaryConstraintOps.h  Brie.h  CMakeLists.txt  CompiledIndexUtils.h  CompiledRamRelation.h  CompiledRecord.h  CompiledRelation.h  CompiledSouffle.h  CompiledTuple.h  ComponentInstantiationTransformer.cpp  ComponentModel.cpp  ComponentModel.h  Explain.h  ExplainProvenanceImpl.h  Forall.h  FunctorOps.cpp  FunctorOps.h  (+93 more)
src/ast/: Aggregator.cpp  Aggregator.h  AlgebraicDataType.cpp  AlgebraicDataType.h  AliasType.cpp  AliasType.h  Annotation.cpp  Annotation.h  Argument.h  AstArgument.h  AstClause.h  AstComponent.h  AstFunctorDeclaration.h  AstIO.h  AstLiteral.h  AstNode.h  AstParserUtils.cpp  AstParserUtils.h  AstProgram.h  AstQualifiedName.h  AstRelation.h  AstType.h  AstUtils.cpp  AstVisitor.h  Atom.cpp  Atom.h  Attribute.cpp  Attribute.h  BinaryConstraint.cpp  BinaryConstraint.h  BooleanConstraint.cpp  BooleanConstraint.h  BranchInit.cpp  BranchInit.h  BranchType.cpp  BranchType.h  Clause.cpp  Clause.h  Component.cpp  Component.h  (+82 more)
src/ast/analysis/: Aggregate.cpp  Aggregate.h  AstGround.cpp  AstGroundAnalysis.cpp  AstIOType.cpp  AstIOTypeAnalysis.cpp  AstProfileUse.cpp  AstProfileUse.h  AstType.cpp  AstTypeAnalysis.cpp  AstTypeEnvironment.cpp  AstTypeEnvironment.h  AstTypeEnvironmentAnalysis.cpp  AstTypeEnvironmentAnalysis.h  ClauseNormalisation.cpp  ComponentLookup.cpp  ComponentLookup.h  ComponentLookupAnalysis.cpp  Constraint.h  ConstraintSystem.h  Ground.cpp  Ground.h  IOType.h  PrecedenceGraph.cpp  PrecedenceGraph.h  RecursiveClauses.cpp  RecursiveClauses.h  RedundantRelations.cpp  RedundantRelations.h  RelationSchedule.cpp  RelationSchedule.h  SCCGraph.cpp  SCCGraph.h  TopologicallySortedSCCGraph.cpp  TopologicallySortedSCCGraph.h  Type.cpp  Type.h  TypeConstraints.cpp  TypeConstraints.h  TypeSystem.h
src/ast/tests/: CMakeLists.txt  ast_print_test.cpp  ast_program_test.cpp  ast_recursive_clauses_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  sips_metric_test.cpp  type_system_test.cpp
src/ast/transform/: AddNullariesToAtomlessAggregates.cpp  AstComponentChecker.cpp  AstSemanticChecker.cpp  AstTransforms.cpp  AstTransforms.h  AstUserDefinedFunctors.cpp  ComponentChecker.cpp  ComponentInstantiation.cpp  ComponentInstantiationTransformer.cpp  DebugDeltaRelation.cpp  DebugDeltaRelation.h  DebugReporter.cpp  DebugReporter.h  (+39 more)
src/ast2ram/: AstToRamTranslator.cpp  ClauseTranslator.h
src/interpreter/: BTreeDeleteIndex.cpp  BTreeIndex.cpp  Context.h  Engine.cpp  Engine.h  EqrelIndex.cpp  Generator.cpp  Generator.h  IncrementalIndex.cpp  Index.h  InterpreterEngine.cpp  InterpreterEngine.h  InterpreterGenerator.h  InterpreterProgInterface.h  Node.h  ProgInterface.h  ProvenanceIndex.cpp  Relation.h  Util.h
src/parser/: AggregateOp.h  Helper.h  ParserDriver.cpp  ParserDriver.h  ParserUtils.cpp  ParserUtils.h  RelationTag.h  SrcLocation.cpp  SrcLocation.h  TypeAttribute.cpp  VirtualFileSystem.cpp  VirtualFileSystem.h  parser.yy  scanner.ll
src/profile/: HtmlGenerator.h  Reader.h  StringUtils.h  Table.h  Tui.h
src/ram/: AbstractAggregate.h  AbstractConditional.h  AbstractExistenceCheck.h  AbstractOperator.h  Aggregate.h  AggregateExistenceCheck.h  Aggregator.h  Assign.h  AutoIncrement.h  BinRelationStatement.h  Break.h  Call.h  Clear.h  Condition.h  Conjunction.h  Constraint.h  DebugInfo.h  EmptinessCheck.h  Erase.h  EstimateJoinSize.h  ExistenceCheck.h  Exit.h  Expression.h  Extend.h  False.h  Filter.h  FloatConstant.h  GuardedInsert.h  IO.h  IfExists.h  IfNotExists.h  IndexAggregate.h  IndexIfExists.h  IndexIfNotExists.h  IndexOperation.h  IndexScan.h  Insert.h  IntrinsicAggregator.h  IntrinsicOperator.h  IterationNumber.h  (+55 more)
src/reports/: DebugReport.cpp  ErrorReport.cpp  ErrorReport.h
src/souffle/: ReadStreamCSV.h  RecordTable.h  WriteStream.h  WriteStreamCSV.h
src/synthesiser/: Relation.cpp  Relation.h  Synthesiser.cpp  Synthesiser.h  SynthesiserRelation.cpp
src/test/: btree_multiset_test.cpp  btree_set_test.cpp  matching_test.cpp  ram_arithmetic_test.cpp
src/tests/: CMakeLists.txt  Makefile.am  ast_parser_utils_test.cpp  ast_print_test.cpp  ast_program_test.cpp  ast_transformers_test.cpp  ast_utils_test.cpp  brie_test.cpp  btree_multiset_test.cpp  btree_set_test.cpp  compiled_tuple_test.cpp  constraints_test.cpp  graph_utils_test.cpp  interpreter_relation_test.cpp  matching_test.cpp  parallel_utils_test.cpp  profile_util_test.cpp  ram_arithmetic_test.cpp  ram_condition_equal_clone_test.cpp  ram_expression_equal_clone_test.cpp  ram_operation_equal_clone_test.cpp  ram_relation_equal_clone_test.cpp  ram_relation_test.cpp  ram_statement_equal_clone_test.cpp  record_table_test.cpp  symbol_table_test.cpp  table_test.cpp  type_system_test.cpp  util_test.cpp  visitor_test.cpp
(+686 files in other folders)
